--- a/lib/index.less
+++ b/lib/index.less
@@ -20,6 +20,9 @@
   transform: translate(0px, 4px) scale(1);
   text-shadow: 0px -4px 2px rgba(35, 37, 35, 0.829);
 }
+.transition {
+  transition: 0.2s;
+}
 
 html {
   background: url(../img/pictures/pixel_art_8_bit_retro_games-1364327.png);
@@ -62,10 +65,72 @@ main {
 }
 
 .control-panel {
+  position: relative;
   width: 228px;
   margin-top: 79px;
   margin-left: 29px;
   background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 13%, rgba(250, 192, 0, 0.836) 20%, rgba(245, 170, 7, 0.836) 40%, transparent, transparent, rgba(255, 0, 0, 0.719) 70%);
+
+  .pixel-size-panel {
+    position: absolute;
+    top: -43px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    width: 214px;
+    padding: 7px;
+
+    .activePixelSize {
+      box-shadow: 0 0 0 2px black;
+    }
+
+    &_wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 3px;
+      background: rgba(255, 230, 0, 0.822);
+      border-radius: 2px;
+    }
+
+    &_pixel {
+      &-1 {
+        background: #000;
+        width: 10px;
+        height: 10px;
+      }
+
+      &-2 {
+        background: #000;
+        width: 12px;
+        height: 12px;
+      }
+
+      &-3 {
+        background: #000;
+        width: 14px;
+        height: 14px;
+      }
+
+      &-4 {
+        background: #000;
+        width: 16px;
+        height: 16px;
+      }
+
+      &-5 {
+        background: #000;
+        width: 18px;
+        height: 18px;
+      }
+
+      &-6 {
+        background: #000;
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
 
   .upper-panel {
     height: 250px;
@@ -123,7 +188,12 @@ main {
       border-radius: 5px 20px 20px 5px;
 
       .wrapper {
+        width: 100%;
         border-radius: 10px;
+      }
+
+      .name {
+        text-shadow: 0 0 2px white;
       }
 
       &-1 {
@@ -138,8 +208,8 @@ main {
 
       &-3 {
         display: grid;
-        grid-template-columns: repeat(auto-fit, 20px);
-        grid-template-rows: repeat(auto-fit, 20px);
+        grid-template-columns: repeat(auto-fill, 20px);
+        grid-template-rows: repeat(auto-fill, 20px);
         grid-gap: 7px;
         width: 182px;
         height: 100px;
@@ -147,6 +217,8 @@ main {
         background: white;
 
         .color {
+          justify-self: center;
+          align-self: center;
           width: 20px;
           height: 20px;
           border-radius: 50%;
@@ -156,6 +228,14 @@ main {
         .color:hover {
           transition: transform 0.2s;
           transform: scale(1.1);
+          transform-origin: 50%;
+          border: 2px solid white;
+          box-shadow: 0 0 1px 2px black;
+        }
+
+        .color:active {
+          transform: scale(0.9);
+          transform-origin: 50%;
           border: 2px solid white;
           box-shadow: 0 0 0 2px black;
         }
@@ -177,8 +257,6 @@ main {
 }
 
 canvas {
-
-  z-index: 2;
   width: 512px;
   height: 512px;
   //align-self: center;
@@ -186,6 +264,16 @@ canvas {
   //margin-top: 75px;
   //box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
   image-rendering: pixelated;
+}
+
+.layer-main {
+  z-index: 2;
+}
+
+.layer-pointer {
+  //position: absolute;
+  left: 0;
+  z-index: 0;
 }
 
 
