--- a/lib/index.less
+++ b/lib/index.less
@@ -20,6 +20,7 @@
   transform: translate(0px, 4px) scale(1);
   text-shadow: 0px -4px 2px rgba(35, 37, 35, 0.829);
 }
+
 .transition {
   transition: 0.2s;
 }
@@ -64,9 +65,10 @@ main {
   font-family: Comics;
 }
 
-.control-panel {
+.control-panel-left {
   position: relative;
   width: 228px;
+  height: 713px;
   margin-top: 79px;
   margin-left: 29px;
   background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 13%, rgba(250, 192, 0, 0.836) 20%, rgba(245, 170, 7, 0.836) 40%, transparent, transparent, rgba(255, 0, 0, 0.719) 70%);
@@ -84,7 +86,7 @@ main {
       box-shadow: 0 0 0 2px black;
     }
 
-    &_wrapper {
+    &__wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -93,7 +95,7 @@ main {
       border-radius: 2px;
     }
 
-    &_pixel {
+    &__pixel {
       &-1 {
         background: #000;
         width: 10px;
@@ -251,29 +253,28 @@ main {
 .canvas-wrapper {
   position: relative;
   align-self: center;
+  width:512px;
+  height: 512px;
   margin: 0 auto;
   margin-top: 75px;
   box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
 }
 
 canvas {
+  position: absolute;
+  left: 0;
   width: 512px;
   height: 512px;
-  //align-self: center;
-  //margin: 0 auto;
-  //margin-top: 75px;
-  //box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
   image-rendering: pixelated;
 }
 
-.layer-main {
+.canvas-layer-1 {
   z-index: 2;
 }
 
-.layer-pointer {
-  //position: absolute;
-  left: 0;
-  z-index: 0;
+.canvas-layer-upper {
+  position: absolute;
+  z-index: 3;
 }
 
 
@@ -362,4 +363,18 @@ input[type="range"]::-webkit-slider-thumb {
   height: 15px;
   background: #ecd503;
   border-radius: 10px;
+}
+
+.control-panel-right {
+  .layers-panel {
+    height: 200px;
+
+    &__control {
+      .button-add-layer {
+        width: 100px;
+        height: 20px;
+      }
+    }
+  }
+
 }
