--- a/lib/index.less
+++ b/lib/index.less
@@ -26,18 +26,23 @@
 }
 
 html {
+  height: 100vh;
+}
+body {
+  min-height: 900px;
+  height: 100%;
+  font-family: Roboto;
   background: url(../img/pictures/pixel_art_8_bit_retro_games-1364327.png);
   background-size: auto 100%;
+  //background: rgba(0, 0, 0, 0.055);
 }
 
-body {
+.page-wrapper {
   max-width: 1440px;
-  height: 970px;
+  height: 100%;
   margin: 0 auto;
-  font-family: Roboto;
   background-color: rgba(255, 255, 255, 0.897);
 }
-
 header {
   display: grid;
   grid-template-columns: 40px 1fr;
@@ -62,6 +67,8 @@ header {
 
 main {
   display: flex;
+  justify-content: space-between;
+  height:95%;
   font-family: Comics;
 }
 
@@ -250,21 +257,28 @@ main {
   }
 }
 
+.canvas-base {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:64%;
+  overflow: hidden;
+}
+
 .canvas-wrapper {
   position: relative;
+  justify-items: center;
   align-self: center;
-  width:512px;
-  height: 512px;
-  margin: 0 auto;
-  margin-top: 75px;
+  width: 99%;
+  height: 99%;
   box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
 }
 
 canvas {
   position: absolute;
   left: 0;
-  width: 512px;
-  height: 512px;
+  width: 100%;
+  height: 100%;
   image-rendering: pixelated;
 }
 
