--- a/lib/index.less
+++ b/lib/index.less
@@ -37,7 +37,7 @@ body {
   display: grid;
   grid-template-rows: auto 1fr;
   align-content: flex-start;
-  max-width: 1440px;
+  max-width: 1700px;
   height: 100%;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.897);
@@ -68,6 +68,7 @@ header {
 main {
   display: flex;
   justify-content: space-between;
+  padding-top: 10px;
   font-family: Comics;
 }
 
@@ -266,6 +267,63 @@ main {
   }
 }
 
+.frame-column {
+  position: relative;
+  z-index: 3;
+  width: 110px;
+
+  &__frame-wrapper {
+    position: relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 106px;
+    height: 106px;
+    border: 2px solid grey;
+    border-radius: 5px;
+
+    &--active {
+      border: 2px solid black;
+    }
+  }
+
+  &__frame {
+    image-rendering: pixelated;
+  }
+
+  &__frame-number {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    background: rgba(255, 230, 0, 0.822);
+  }
+
+  &__button-delete-frame {
+    position: absolute;
+    top: 0;
+    right: 5px;
+
+  }
+
+  &__button-duplicate-frame {
+    position: absolute;
+    right: 5px;
+    bottom: 0;
+  }
+
+}
+
+.button-add-frame {
+  width: 100%;
+  height: 30px;
+  margin-top: 20px;
+}
+
 .canvas-base {
   display: flex;
   justify-content: center;
@@ -273,7 +331,7 @@ main {
   width: 64%;
   max-height: 888px;
   overflow: hidden;
-  border-left: 2px dotted-dash black;
+  border: 2px solid black;
 }
 
 .canvas-wrapper {
@@ -284,7 +342,7 @@ main {
   box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
 }
 
-canvas {
+.canvas {
   position: absolute;
   left: 0;
   width: 100%;
@@ -293,12 +351,12 @@ canvas {
 }
 
 .canvas-layer-1 {
-  z-index: 2;
+  z-index: 4;
 }
 
 .canvas-layer-upper {
   position: absolute;
-  z-index: 3;
+  z-index: 5;
 }
 
 
