feat: add delete and duplicate frame functionality

--- a/lib/index.less
+++ b/lib/index.less
@@ -271,6 +271,9 @@ main {
   position: relative;
   z-index: 3;
   width: 110px;
+  height: 800px;
+  overflow-x: hidden;
+  overflow-y: auto; 
 
   &__frame-wrapper {
     position: relative;
