--- a/lib/index.less
+++ b/lib/index.less
@@ -257,6 +257,17 @@ main {
 }
 
 .control-panel-right {
+  .animation-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    &__monitor {
+      background-size: 100% 100%;
+    }
+  }
+
   .canvas-size-wrapper {
     display: flex;
     justify-content: space-between;
@@ -273,11 +284,11 @@ main {
   width: 110px;
   height: 800px;
   overflow-x: hidden;
-  overflow-y: auto; 
+  overflow-y: auto;
 
   &__frame-wrapper {
     position: relative;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 106px;
