--- a/lib/index.less
+++ b/lib/index.less
@@ -37,7 +37,7 @@ body {
   display: grid;
   grid-template-rows: auto 1fr;
   align-content: flex-start;
-  max-width: 1700px;
+  max-width: 100vw;
   height: 100%;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.897);
@@ -76,8 +76,7 @@ main {
   position: relative;
   width: 228px;
   height: 713px;
-  margin-top: 79px;
-  margin-left: 29px;
+  margin: 79px 10px 0 29px;
   background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 13%, rgba(250, 192, 0, 0.836) 20%, rgba(245, 170, 7, 0.836) 40%, transparent, transparent, rgba(255, 0, 0, 0.719) 70%);
 
   .pixel-size-panel {
@@ -180,6 +179,7 @@ main {
   }
 
   .lower-panel {
+    width:228px;
     margin-top: 200px;
     padding-bottom: 15px;
     box-shadow: 0 3px 3px 0px rgba(45, 51, 49, 0.281);
@@ -257,14 +257,32 @@ main {
 }
 
 .control-panel-right {
+  width: 200px;
   .animation-wrapper {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
-    width: 200px;
-    height: 200px;
-    &__monitor {
-      background-size: 100% 100%;
+
+    &__monitor-wrapper {
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      width: 200px;
+      height: 200px;
+    }
+
+    &__fps-monitor {
+      //width: 40px;
+      height: 15px;
+      margin-right: 5px;
+      text-align: right;
+    }
+
+    &__control-panel {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      width: 100%;
     }
   }
 
@@ -281,11 +299,42 @@ main {
 .frame-column {
   position: relative;
   z-index: 3;
-  width: 110px;
-  height: 800px;
+  width: 125px;
+  height: 791px;
+  margin: 0 5px 0 0;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
 
+  &::-webkit-scrollbar {
+    width: 9px;
+    height: 3px;
+  }
+  &::-webkit-scrollbar-button {
+    display: none;
+    background-color: #666;
+  }
+  &::-webkit-scrollbar-track {
+    
+    background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 21%, rgba(250, 192, 0, 0.836) 28%, rgba(245, 170, 7, 0.836) 47%, transparent, transparent, rgba(255, 0, 0, 0.719) 73%);
+  }
+  &::-webkit-scrollbar-track-piece { 
+    //background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 13%, rgba(250, 192, 0, 0.836) 20%, rgba(245, 170, 7, 0.836) 40%, transparent, transparent, rgba(255, 0, 0, 0.719) 70%);
+  }
+  &::-webkit-scrollbar-thumb { 
+    //height: 50px; 
+    background-color:rgb(66, 230, 120); 
+    box-shadow:inset 0 0 3px black;
+    border-radius: 2px;
+    //mix-blend-mode: color-burn ;
+  }
+  &::-webkit-scrollbar-corner {
+    
+    //background-color: #999;
+  }
+  &::-webkit-resizer {
+    //background-color: #666;
+  }
+  
   &__frame-wrapper {
     position: relative;
     display: flex;
@@ -293,11 +342,12 @@ main {
     align-items: center;
     width: 106px;
     height: 106px;
-    border: 2px solid grey;
+    margin-bottom: 5px;
+    border: 3px solid grey;
     border-radius: 5px;
 
     &--active {
-      border: 2px solid black;
+      border: 3px solid black;
     }
   }
 
@@ -312,8 +362,9 @@ main {
     width: 20px;
     height: 20px;
     text-align: center;
-    border-right: 2px solid black;
-    border-bottom: 2px solid black;
+    border-right: 3px solid grey;
+    border-bottom: 3px solid grey;
+    border-radius: 0 0 5px 0;
     background: rgba(255, 230, 0, 0.822);
   }
 
@@ -342,7 +393,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 64%;
+  width: 67%;
   max-height: 888px;
   overflow: hidden;
   border: 2px solid black;
@@ -416,7 +467,6 @@ main {
   }
 }
 
-
 .filters {
   align-self: center;
   margin-right: 10px;
@@ -446,11 +496,11 @@ main {
 
 input[type="range"] {
   -webkit-appearance: none;
-  align-self: center;
-  width: 100px;
+  width: 140px;
   height: 15px;
   background: rgba(121, 201, 75, 0.459);
   border-radius: 10px;
+  outline: none;
 }
 
 input[type="range"]::-webkit-slider-thumb {
