--- a/lib/index.less
+++ b/lib/index.less
@@ -8,10 +8,13 @@
   src: url('../fonts/CS\ Nancy.ttf') format('truetype');
 }
 
+@blue: rgba(0, 60, 255, 0.623);
+
 * {
   margin: 0;
   padding: 0;
   border: 0;
+  outline: 0;
   list-style: none;
 }
 
@@ -266,7 +269,7 @@ main {
 
     &__monitor-wrapper {
       display: grid;
-      justify-content: center;
+      justify-items: center;
       align-items: center;
       width: 200px;
       height: 200px;
@@ -294,6 +297,7 @@ main {
 
   input {
     width: 60px;
+    text-align: center;
   }
 }
 
@@ -358,6 +362,10 @@ main {
     }
   }
 
+  &__frame-wrapper:hover>button {
+    display: block;
+  }
+
   &__frame {
     image-rendering: pixelated;
   }
@@ -377,16 +385,40 @@ main {
 
   &__button-delete-frame {
     position: absolute;
-    top: 0;
-    right: 5px;
+    top: 1px;
+    right: 1px;
+    display: none;
+    width: 22px;
+    height: 22px;
+    background: url(../img/icons/garbage.svg);
+    transition: filter 0.25s;
+  }
 
+  &__button-delete-frame:hover {
+    transform: scale(0.9);
+    filter: drop-shadow(0 0 5px red);
+  }
+
+  &__button-delete-frame:active {
+    transform: scale(0.9);
+    filter: drop-shadow(0 0 5px red);
   }
 
   &__button-duplicate-frame {
     position: absolute;
     right: 5px;
     bottom: 0;
+    display: none;
+    width: 22px;
+    height: 22px;
+    background: url(../img/icons/duplicate-1.svg);
   }
+
+  &__button-duplicate-frame:hover {
+
+    transition: filter 0.25s;
+  }
+
 
 }
 
@@ -404,6 +436,7 @@ main {
 
   &__main-wrapper {
     position: absolute;
+    top: 50%;
     right: 0;
     display: flex;
   }
@@ -442,50 +475,185 @@ main {
   }
 
   &__operating-wrapper {
+    width: 250px;
     height: 300px;
+    background: rgba(245, 221, 7, 0.993);
+    transition: width 0.8s;
+    overflow: hidden;
   }
 
   &__operating {
+    width: 230px;
     height: 100%;
-    font-size: 14px;
-    background: rgba(245, 221, 7, 0.993);
-    overflow: hidden;
-    transition: width 0.8s;
+    margin: 0 auto;
+    font-size: 13px;
   }
 
   &__save-operating {
-    width: 250px;
+    width: 230px;
     display: grid;
-    justify-items: center;
     align-content: space-around;
 
     .range-input-wrapper {
+      position: relative;
       display: flex;
-      justify-content: space-between;
+      align-items: center;
+
+      input {
+        width: 135px;
+        margin: 0 5px 0 9px;
+      }
+
+      span {
+        height: 12px;
+      }
+
+      span:nth-child(3) {
+        position: absolute;
+        right: 0;
+      }
+
     }
 
     .resolution {
       display: flex;
-      input {
-        width: 45px;
-        margin: 0 10px 0;
-        text-align: center;
-      }
-    }
-    .file-format-wrapper {
-      display:flex;
       align-items: center;
-      .files-name {
-        width: 100px;
+      padding-bottom: 22px;
+      border-bottom: 1px solid black;
+
+      input {
+        width: 46px;
+        text-align: center;
+        border: 2px solid black;
+        border-radius: 2px;
       }
-      .buttons-wrapper {
-        display:grid;
-        align-content: space-around;
-        height: 150px;
-        button {
-          height: 20px;
+
+      input:nth-child(2) {
+        margin: 0 10px 0;
+      }
+
+      input:nth-child(4) {
+        margin-left: 10px;
+      }
+
+    }
+
+    .file-format-wrapper {
+      display: grid;
+      align-content: space-around;
+
+      .files-name {
+        width: 224px;
+        padding-left: 2px;
+        border: 2px solid black;
+
+        &:focus {
+          border-color: @blue;
         }
       }
+
+      .buttons-wrapper {
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-end;
+        height: 130px;
+
+        .inner {
+          display: grid;
+          justify-items: center;
+          width: 100px;
+          height: 115px;
+        }
+
+        .image {
+          width: 90px;
+          height: 90px;
+          background: url(../img/pictures/mario.jpg) center/contain no-repeat;
+        }
+
+        .gif {
+          width: 90px;
+          height: 90px;
+          background:
+            url(),
+            url(../img/pictures/mario.gif) center/contain no-repeat;
+        }
+
+        button {
+          position: relative;
+          width: 100%;
+          height: 25px;
+          border: 2px solid @blue;
+          transition: all 500ms ease;
+          box-shadow: 0px 4px 10px 2px rgba(black, 0.5);
+
+          &:before {
+            position: absolute;
+            content: '';
+            width: 0%;
+            height: 100%;
+            background: @blue;
+            top: 0;
+            left: 50%;
+            transition: all 0ms ease;
+          }
+
+          &:hover {
+            color: green;
+
+            &:before {
+              position: absolute;
+              content: '';
+              width: 100%;
+              height: 100%;
+              background: @blue;
+              top: 0;
+              left: 0%;
+              transition: all 300ms ease;
+            }
+          }
+
+          &:active {
+            box-shadow: none;
+            transition: 150ms;
+          }
+
+          // &:before{
+          //   position: absolute;
+          //   content: '';
+          //   width: 0%; height: 100%;
+          //   background: @blue;
+          //   top: 0;  left: auto; right: 0;
+          //   //z-index: -1;
+          //   transition: all 300ms ease;
+          // }
+
+          // &:hover{
+          //   color: green; 
+
+          //   &:before{
+          //     position: absolute;
+          //     content: '';
+          //     width: 100%; height: 100%;
+          //     background: @blue;
+          //     top: 0; left: 0; right: 0;
+          //     z-index:0 ;
+          //   }
+          // }
+          // &:active {
+          //   box-shadow: none;
+          //   transition: 150ms;
+          // }
+        }
+      }
+    }
+  }
+
+  &__import-operating {
+    display: none;
+
+    .radio-button-wrapper {
+      display: grid;
     }
   }
 }
