--- a/css/blocks/aside-panel.less
+++ b/css/blocks/aside-panel.less
@@ -47,21 +47,62 @@
   &__operating-wrapper {
     width: 250px;
     height: 300px;
-    background: rgba(245, 221, 7, 0.993);
     transition: width 0.8s;
     overflow: hidden;
+    background: rgba(245, 221, 7, 0.993);
+
+    button {
+      position: relative;
+      width: 100%;
+      height: 25px;
+      border: 2px solid @blue;
+      transition: all 500ms ease;
+      box-shadow: 0px 4px 10px 2px rgba(black, 0.5);
+      background: white;
+
+      &:before {
+        position: absolute;
+        content: '';
+        width: 0%;
+        height: 100%;
+        background: @blue;
+        top: 0;
+        left: 50%;
+        transition: all 0ms ease;
+      }
+
+      &:hover {
+        color: green;
+
+        &:before {
+          position: absolute;
+          content: '';
+          width: 100%;
+          height: 100%;
+          background: @blue;
+          top: 0;
+          left: 0%;
+          transition: all 300ms ease;
+        }
+      }
+
+      &:active {
+        box-shadow: none;
+        transition: 150ms;
+      }
+    }
   }
 
   &__operating {
     width: 230px;
     height: 100%;
-    margin: 0 auto;
+    margin: 0 10px;
     font-size: 13px;
   }
 
   &__save-operating {
     width: 230px;
-    display: grid;
+    display: none;
     align-content: space-around;
 
     .range-input-wrapper {
@@ -153,82 +194,60 @@
             url(),
             url(../img/pictures/mario.gif) center/contain no-repeat;
         }
-
-        button {
-          position: relative;
-          width: 100%;
-          height: 25px;
-          border: 2px solid @blue;
-          transition: all 500ms ease;
-          box-shadow: 0px 4px 10px 2px rgba(black, 0.5);
-
-          &:before {
-            position: absolute;
-            content: '';
-            width: 0%;
-            height: 100%;
-            background: @blue;
-            top: 0;
-            left: 50%;
-            transition: all 0ms ease;
-          }
-
-          &:hover {
-            color: green;
-
-            &:before {
-              position: absolute;
-              content: '';
-              width: 100%;
-              height: 100%;
-              background: @blue;
-              top: 0;
-              left: 0%;
-              transition: all 300ms ease;
-            }
-          }
-
-          &:active {
-            box-shadow: none;
-            transition: 150ms;
-          }
-
-          // &:before{
-          //   position: absolute;
-          //   content: '';
-          //   width: 0%; height: 100%;
-          //   background: @blue;
-          //   top: 0;  left: auto; right: 0;
-          //   //z-index: -1;
-          //   transition: all 300ms ease;
-          // }
-
-          // &:hover{
-          //   color: green; 
-
-          //   &:before{
-          //     position: absolute;
-          //     content: '';
-          //     width: 100%; height: 100%;
-          //     background: @blue;
-          //     top: 0; left: 0; right: 0;
-          //     z-index:0 ;
-          //   }
-          // }
-          // &:active {
-          //   box-shadow: none;
-          //   transition: 150ms;
-          // }
-        }
       }
     }
   }
 
   &__import-operating {
-    display: none;
+    display: grid;
+    align-content: flex-start;
+
+    .input-wrapper {
+      display: flex;
+      justify-content: space-between;
+      margin: 10px 0 14px 0;
+      align-items: center;
+
+      .clean {
+        width: 13px;
+        height: 13px;
+        background: url(../img/icons/delete.svg) 50%/ 100% no-repeat;
+
+        &:hover {
+          transform: scale(1.3);
+        }
+
+        &:active {
+          transform: scale(0.9);
+          transition: 0.1s;
+        }
+      }
+    }
+
+    .input-wrapper:nth-child(3) {
+      height: 50px;
+      margin: -1px 0 12px 0;
+      border-bottom: 1px solid black;
+    }
+
+    .url {
+      //width: 230px;
+      height: 19px;
+      border: 2px solid black;
+
+      &::placeholder {
+        text-align: center;
+      }
+    }
+
+    .button-import-file {
+      width: 100%;
+    }
+
 
     .radio-button-wrapper {
       display: grid;
+      margin: 15px 0 0 0;
     }
   }
 }
