--- a/css/index.less
+++ b/css/index.less
@@ -29,21 +29,10 @@
 }
 
 body {
-  min-height: 890px;
-  height: 100vh;
+  //min-height: 890px;
   font-family: Roboto;
   background: url(../img/pictures/pixel_art_8_bit_retro_games-1364327.png);
   background-size: auto 100%;
-}
-
-.page-wrapper {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  align-content: flex-start;
-  max-width: 100vw;
-  height: 100%;
-  margin: 0 auto;
-  background-color: rgba(255, 255, 255, 0.897);
 }
 
 header {
@@ -70,9 +59,11 @@ header {
 
 main {
   display: flex;
-  justify-content: space-between;
+  //justify-content: space-between;
   padding-top: 10px;
   font-family: Comics;
+  box-sizing:border-box;
+  background-color: rgba(255, 255, 255, 0.897);
 }
 
 
@@ -82,22 +73,24 @@ main {
   justify-content: center;
   align-items: center;
   width: 67%;
-  max-height: 888px;
+  height:900px;
+  //max-height: 888px;
+  margin-right: 5px;
   overflow: hidden;
   border: 2px solid black;
 }
 
 .canvas-wrapper {
   position: relative;
-  align-self: center;
+  //align-self: center;
   width: 99%;
   height: 99%;
   box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
 }
 
 .canvas {
+  //display:none;
   position: absolute;
-  left: 0;
   width: 100%;
   height: 100%;
   image-rendering: pixelated;
@@ -110,49 +103,6 @@ main {
 .canvas-layer-upper {
   position: absolute;
   z-index: 5;
-}
-
-
-.search-box {
-  z-index: 4;
-  align-self: center;
-  display: flex;
-  border-radius: 18px;
-  border: 4px inset rgb(247, 247, 243);
-  overflow: hidden;
-
-  .search-field {
-    width: 250px;
-    height: 30px;
-    margin-left: -4px;
-    padding-left: 10px;
-    border-top-left-radius: 14px;
-    border-bottom-left-radius: 14px;
-    background: linear-gradient(to right, yellow 50%, red 95%);
-    box-shadow: inset 0 0 4px 2px rgb(231, 55, 11);
-  }
-
-  .search-button {
-    margin-left: -80px;
-    width: 80px;
-    height: 30px;
-    font-family: Comics;
-    font-size: 17px;
-    color: rgba(24, 23, 23, 0.836);
-    line-height: 20px;
-    border: 4px outset rgb(70, 68, 68);
-    border-radius: 14px;
-    background: rgba(247, 244, 244, 0.267);
-  }
-
-  .search-button:hover {
-    transform: scale(1.03);
-  }
-
-  .search-button:active {
-    outline: 0;
-    transform: scale(0.95)
-  }
 }
 
 .filters {
