feat: add flip, rotate, clone layer functionality

--- a/css/blocks/aside-panel.less
+++ b/css/blocks/aside-panel.less
@@ -45,7 +45,7 @@
   }
 
   &__operating-wrapper {
-    width: 250px;
+    width: 0px;
     height: 300px;
     transition: width 0.8s;
     overflow: hidden;
@@ -94,7 +94,7 @@
   }
 
   &__operating {
-    width: 230px;
+    width: 0px;
     height: 100%;
     margin: 0 10px;
     font-size: 13px;
@@ -199,7 +199,8 @@
   }
 
   &__import-operating {
-    display: grid;
+    //display: none;
+    width:230px;
     align-content: flex-start;
 
     .input-wrapper {
