--- a/css/blocks/control-panel-frame.less
+++ b/css/blocks/control-panel-frame.less
@@ -19,7 +19,7 @@
 
   &::-webkit-scrollbar-track {
 
-    background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 21%, rgba(250, 192, 0, 0.836) 28%, rgba(245, 170, 7, 0.836) 47%, transparent, transparent, rgba(255, 0, 0, 0.719) 73%);
+    background: linear-gradient(to bottom, rgba(245, 221, 7, 0.836) 21%, rgba(250, 192, 0, 0.836) 28%, rgba(245, 170, 7, 0.836) 47%, transparent, transparent, rgba(255, 0, 0, 0.719) 73%);
   }
 
   &::-webkit-scrollbar-track-piece {
@@ -115,12 +115,29 @@
 
     transition: filter 0.25s;
   }
-
-
 }
 
 .button-add-frame {
-  width: 100%;
-  height: 30px;
+  position: relative;
+  width: 93%;
+  height: 50px;
+  margin-left: -5px;
   margin-top: 20px;
+  font-family: inherit;
+  color: rgba(0, 0, 0, 0.418);
+  font-size: 11px;
+  border: 4px solid rgba(253, 51, 51, 0.87);
+  border-radius: 10px 10px 90px 90px;
+  box-shadow: 0 7px 5px -2px, inset 0 0 2px black;
+  background: linear-gradient(to bottom, rgba(175, 174, 174, 0.658), white, white, white, white);
+
+  // &:hover {
+  //   border: 4px solid rgba(54, 212, 14, 0.74);
+  // }
+
+  &:active {
+    font-size: 10.5px;
+    border: 5px groove rgba(253, 51, 51, 0.87);
+    box-shadow: inset 0 -3px 3px black;
+  }
 }
