--- a/css/blocks/control-panel-left.less
+++ b/css/blocks/control-panel-left.less
@@ -1,8 +1,34 @@
+.active {
+  filter: drop-shadow(0px 6px 0px red);
+  background-size: 32% !important;
+  transforn-origin: 50%;
+  transition: 0.15s;
+  //transform: translate(0px, 4px);
+  //text-shadow: 0px -4px 2px rgba(35, 37, 35, 0.829);
+}
+
+.tooltip-wrapper {
+  position: absolute;
+  left: 80px;
+  display: grid;
+  align-content: flex-start;
+  width:170px;
+  font-size: 10px;
+  border: 2px solid black;
+  filter: drop-shadow(0 0 0px red);
+
+  .descriptor-button {
+    line-height: 25px;
+    border: 1px solid black;
+  }
+}
+
 .control-panel-left {
   position: relative;
   width: 228px;
   height: 713px;
   margin: 79px 10px 0 29px;
+  box-shadow: 0 -3px 3px 0px rgba(45, 51, 49, 0.281);
   background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 13%, rgba(250, 192, 0, 0.836) 20%, rgba(245, 170, 7, 0.836) 40%, transparent, transparent, rgba(255, 0, 0, 0.719) 70%);
 
   .pixel-size-panel {
@@ -67,40 +93,79 @@
   }
 
   .upper-panel {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     height: 250px;
-    box-shadow: 0 -3px 3px 0px rgba(45, 51, 49, 0.281);
+    margin: 15px 0 0 0;
+    //box-shadow: 0 -3px 3px 0px rgba(45, 51, 49, 0.281);
 
     &__item {
-      margin-left: 19px;
-      height: 48px;
-      width: 196px;
+      position: relative;
+      //margin-left: 19px;
+      //height: 48px;
+      //width: 196px;
       font-family: Comics;
       font-weight: bold;
       line-height: 48px;
 
-      span {
-        display: block;
-        margin-left: 50px;
-        font-size: 16px;
-        transition: 0.2s;
+      > span {
+         display: block;
+         width:100%;
+         height: 100%;
+        // margin-left: 50px;
+        // font-size: 16px;
+        // transition: 0.2s;
       }
 
       &-1 {
-        background: url(../img/icons/fill-drip.svg) no-repeat 0 50%;
+        background: url(../img/icons/pencil1.svg) no-repeat 50% 50%;
       }
 
       &-2 {
-        background: url(../img/icons/eye-dropper.svg) no-repeat 0 50%;
-        border-bottom: 1px solid rgb(117, 113, 59);
+        background: url(../img/icons/eye-dropper.svg) no-repeat 50% 50%;
+        //border-bottom: 1px solid rgb(117, 113, 59);
       }
 
       &-3 {
-        background: url(../img/icons/pencil.svg) no-repeat 0 50%;
+        background: url(../img/icons/bucket.svg) no-repeat 50% 50%;
       }
 
       &-4 {
-        background: url(../img/icons/exchange-alt.svg) no-repeat 0 50%;
+        background: url(../img/icons/exchange-alt.svg) no-repeat 50% 50%;
       }
+
+      &-5 {
+        background: url(../img/icons/rubber.svg) no-repeat 50% 50%;
+        background-size: 12%;
+      }
+
+      &-6 {
+        background: url(../img/icons/exchange-alt.svg) no-repeat 50% 50%;
+      }
+
+      &-7 {
+        background: url(../img/icons/square.svg) no-repeat 50% 50%;
+      }
+
+      &-8 {
+        background: url(../img/icons/ring.svg) no-repeat 50% 50%;
+      }
+
+      &-9 {
+        background: url(../img/icons/eyedropper.svg) no-repeat 50% 50%;
+      }
+
+      &-10 {
+        background: url(../img/icons/move-arrows.svg) no-repeat 50% 50%;
+      }
+
+      &-11 {
+        background: url(../img/icons/exchange-alt.svg) no-repeat 50% 50%;
+      }
+
+    }
+    &__item {
+      background-size: 27%;
     }
   }
 
@@ -173,7 +238,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fill, 20px);
         grid-template-rows: repeat(auto-fill, 20px);
-        grid-gap: 7px;
+        grid-gap: 8px;
         width: 182px;
         height: 100px;
         padding: 7px;
@@ -190,7 +255,7 @@
         }
 
         .color:hover {
-          transition: transform 0.2s;
+          transition: transform 0.15s;
           transform: scale(1.1);
           transform-origin: 50%;
           border: 2px solid white;
