--- a/css/index.less
+++ b/css/index.less
@@ -18,12 +18,6 @@
   list-style: none;
 }
 
-.active {
-  color: red;
-  transform: translate(0px, 4px);
-  text-shadow: 0px -4px 2px rgba(35, 37, 35, 0.829);
-}
-
 .transition {
   transition: 0.2s;
 }
@@ -62,7 +56,7 @@ main {
   //justify-content: space-between;
   padding-top: 10px;
   font-family: Comics;
-  box-sizing:border-box;
+  box-sizing: border-box;
   background-color: rgba(255, 255, 255, 0.897);
 }
 
@@ -72,20 +66,21 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 67%;
-  height:900px;
+  width: 900px;
+  height: 900px;
   //max-height: 888px;
   margin-right: 5px;
   overflow: hidden;
-  border: 2px solid black;
+  //border: 3px solid rgb(128, 128, 128);
+  border-radius: 5px;
+  box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
 }
 
 .canvas-wrapper {
   position: relative;
-  //align-self: center;
-  width: 99%;
-  height: 99%;
-  box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
+  //width: 99%;
+  //height: 99%;
+  background: url(../img/canvas-bg/bg-1.png);
 }
 
 .canvas {
@@ -145,7 +140,8 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 20px;
   height: 15px;
-  background: #ecd503;
+  background: #ee0909b7;
+  border: 2px solid rgb(247, 247, 248);
   border-radius: 10px;
 }
 
@@ -153,4 +149,3 @@ input[type="range"]::-webkit-slider-thumb {
 @import 'blocks/control-panel-right.less';
 @import 'blocks/control-panel-frame.less';
 @import 'blocks/aside-panel.less';
-
