--- a/css/blocks/control-panel-right.less
+++ b/css/blocks/control-panel-right.less
@@ -2,12 +2,12 @@
   margin: 1px 0;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  //box-shadow: 0 0px 2px black;
   background: linear-gradient(to bottom, red, white, red);
 }
 
 .control-panel-right {
   width: 220px;
+  height: calc(100% - 25px);
   padding: 7px;
   box-shadow: 0 -3px 3px 0px rgba(45, 51, 49, 0.178), 0 3px 3px 0px rgba(45, 51, 49, 0.178);
   background: linear-gradient(to bottom, rgba(245, 221, 7, 0.836) 14%, rgba(250, 192, 0, 0.836) 28%, rgba(245, 170, 7, 0.836) 34%, transparent, transparent, rgba(255, 0, 0, 0.719) 68%);
@@ -24,14 +24,17 @@
       width: 200px;
       height: 200px;
       margin: -5px 0 13px 0;
-      //border: 2px inset black;
       border-radius: 2px;
       background: rgb(255, 255, 255);
     }
-    
+
     &__background {
-      //width: 100px;
       background: url(../img/canvas-bg/bg-1.png);
+    }
+
+    &__monitor {
+      width: 100%;
+      height: 100%;
     }
 
     &__control-panel {
@@ -42,7 +45,6 @@
     }
 
     &__fps-monitor {
-      //width: 40px;
       height: 15px;
       margin-right: 13px;
       text-align: right;
