--- a/css/index.less
+++ b/css/index.less
@@ -20,11 +20,78 @@
 }
 
 #i4c-dialogs-container {
-  display:none;
+  display: none;
 }
 
 .transition {
   transition: 0.2s;
+}
+
+.tooltip-container {
+  font-family: Comics;
+  font-size: 10px;
+  color: white;
+  border: 2px solid black;
+  opacity: 1;
+  background: #000;
+
+  div {
+    padding: 5px;
+  }
+
+  .tooltip-descriptor-button {
+    display: inline-block;
+    width: 32px;
+    padding: 2px 3px 0 3px;
+    margin-right: 5px;
+    line-height: 13px;
+    text-align: center;
+    vertical-align: middle;
+    border: 1px solid yellow;
+    border-radius: 2px;
+  }
+}
+
+.tip-wrapper {
+  position: absolute;
+  z-index: 100;
+}
+
+.top-tip {
+  &::before {
+    content: '';
+    position: absolute;
+    right: calc(50% - 8px);
+    top: 99%;
+    display: block;
+    border: 9px solid transparent;
+    border-top: 9px solid black;
+    transform: rotate(0deg);
+  }
+}
+.right-tip {
+  &::before {
+    content: '';
+    position: absolute;
+    left: -18px;
+    top: calc(50% - 9px);
+    display: block;
+    border: 9px solid transparent;
+    border-top: 9px solid ;
+    transform: rotate(90deg);
+  }
+}
+.left-tip {
+  &::before {
+    content: '';
+    position: absolute;
+    right: -18px;
+    top: calc(50% - 9px);
+    display: block;
+    border: 9px solid transparent;
+    border-top: 9px solid ;
+    transform: rotate(-90deg);
+  }
 }
 
 body {
@@ -34,29 +101,22 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  display:grid;
+  display: grid;
   grid-template-rows: 48px auto;
   min-height: 890px;
-  height:100vh;
+  height: 100vh;
   font-family: Roboto;
   background: url(../img/pictures/pixel_art_8_bit_retro_games-1364327.png);
   background-size: auto 100%;
 }
 
 header {
-  display: grid;
-  grid-template-columns: 40px 1fr;
   box-shadow: 0 6px 3px -4px rgba(0, 0, 0, 0.425);
   background: linear-gradient(to bottom, rgba(33, 189, 85, 0.692) 35%, rgba(245, 221, 7, 0.836) 50%);
 
-  .menu {
-    margin-left: 10px;
-    background: url(../img/icons/nav-icon.svg);
-  }
-
   h1 {
     margin-top: 9px;
-    margin-left: 50px;
+    margin-left: 30px;
     font-family: CS Nancy, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 20px;
     line-height: 23px;
@@ -76,7 +136,7 @@ main {
 
 .canvas-base {
   position: relative;
-  z-index:5;
+  z-index: 5;
   display: grid;
   justify-content: center;
   align-content: center;
@@ -99,10 +159,11 @@ main {
   width: 100%;
   height: 100%;
   image-rendering: pixelated;
+  image-rendering:-moz-crisp-edges;
 }
 
 .canvas-layer-1 {
-  z-index: 4; 
+  z-index: 4;
 }
 
 .canvas-prev-frame {
@@ -164,6 +225,16 @@ input[type="range"]::-webkit-slider-thumb {
   border: 2px solid rgb(247, 247, 248);
   border-radius: 10px;
 }
+input[type="range"]::slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 15px;
+  background: #ee0909b7;
+  border: 2px solid rgb(247, 247, 248);
+  border-radius: 10px;
+}
+
+
 
 @import 'blocks/control-panel-left.less';
 @import 'blocks/control-panel-right.less';
